trunk/Archive2/4b/928fa35b76dde5/output
main.cpp: In function 'int main()':
main.cpp:9:50: error: cannot convert 'std::basic_string<char>::iterator {aka __gnu_cxx::__normal_iterator<char*, std::basic_string<char> >}' to 'const char*' for argument '1' to 'int remove(const char*)'
         s.erase(std::remove(s.begin(), s.end(), c), s.end());
                                                  ^
